--- a/html/Emap.html
+++ b/html/Emap.html
@@ -101,10 +101,11 @@
             HardDrive: (p) => <IconWrapper {...p}><line x1="22" x2="22" y1="12" y2="12"/><path d="M2 12h20"/><path d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"/><line x1="6" x2="6.01" y1="16" y2="16"/><line x1="10" x2="10.01" y1="16" y2="16"/></IconWrapper>,
             Database: (p) => <IconWrapper {...p}><ellipse cx="12" cy="5" rx="9" ry="3"/><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"/><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"/></IconWrapper>,
             Video: (p) => <IconWrapper {...p}><path d="m22 8-6 4 6 4V8Z"/><rect width="14" height="12" x="2" y="6" rx="2" ry="2"/></IconWrapper>,
-            Blend: (p) => <IconWrapper {...p}><circle cx="9" cy="9" r="7"/><circle cx="15" cy="15" r="7"/></IconWrapper>
+            Blend: (p) => <IconWrapper {...p}><circle cx="9" cy="9" r="7"/><circle cx="15" cy="15" r="7"/></IconWrapper>,
+            File: (p) => <IconWrapper {...p}><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/></IconWrapper>
         };
         
-        const { Settings, Calculator, Move3d, Eye, EyeOff, Plus, Trash2, Target, Rotate3D, Ruler, Box: BoxIcon, Move, Grid3X3, QrCode, Folder, ChevronRight, ChevronDown, ChevronUp, Palette, CheckCircle, Axis3d, MousePointer2, Clapperboard, Image: ImageIcon, Upload, Play, SkipBack, SkipForward, LayoutTemplate, MonitorOff, Film, Timer, Activity, Layers, Workflow, Link, X, Cable, Maximize, AlertTriangle, HardDrive, Database, Video, Blend } = Icons;
+        const { Settings, Calculator, Move3d, Eye, EyeOff, Plus, Trash2, Target, Rotate3D, Ruler, Box: BoxIcon, Move, Grid3X3, QrCode, Folder, ChevronRight, ChevronDown, ChevronUp, Palette, CheckCircle, Axis3d, MousePointer2, Clapperboard, Image: ImageIcon, Upload, Play, SkipBack, SkipForward, LayoutTemplate, MonitorOff, Film, Timer, Activity, Layers, Workflow, Link, X, Cable, Maximize, AlertTriangle, HardDrive, Database, Video, Blend, File } = Icons;
 
         // --- ICONS & HELPERS ---
         const FolderPlus = ({size}) => ( <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M12 10v6M9 13h6"/><path d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"/></svg> );
@@ -152,8 +153,8 @@
             }
 
             async saveAsset(file) {
-                const assetId = crypto.randomUUID();
-                await fetch('/api/asset/' + assetId, {
+                const assetId = file.name;
+                await fetch('/api/asset/' + encodeURIComponent(assetId), {
                     method: 'POST',
                     headers: {
                         'Content-Type': file.type,
@@ -165,7 +166,7 @@
             }
 
             async getAsset(assetId) {
-                const res = await fetch('/api/asset/' + assetId);
+                const res = await fetch('/api/asset/' + encodeURIComponent(assetId));
                 if (!res.ok) return null;
                 return await res.blob();
             }
@@ -177,14 +178,14 @@
                 // Map to format expected by UI
                 return list.map(item => ({
                     id: item.id,
-                    url: '/api/asset/' + item.id,
+                    url: '/api/asset/' + encodeURIComponent(item.id),
                     type: item.mime_type.startsWith('video') ? 'video' : 'image',
                     file: { name: item.name } // Mock file object for UI display
                 }));
             }
 
             async deleteAsset(id) {
-                await fetch('/api/asset/' + id, { method: 'DELETE' });
+                await fetch('/api/asset/' + encodeURIComponent(id), { method: 'DELETE' });
             }
 
             async saveState(key, data) {
@@ -208,6 +209,27 @@
 
             async getUsage() {
                 return { usage: "Server", quota: "Disk" };
+            }
+
+            async listServerFiles(path = '') {
+                try {
+                    const res = await fetch(`/api/fs/list?path=${encodeURIComponent(path)}`);
+                    if (!res.ok) return { path: '', items: [] };
+                    return await res.json();
+                } catch (e) {
+                    console.error("FS List error", e);
+                    return { path: '', items: [] };
+                }
+            }
+
+            async importAssetFromPath(path) {
+                const res = await fetch('/api/asset/import', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ path })
+                });
+                if (!res.ok) throw new Error('Import failed');
+                return await res.json();
             }
         }
 
@@ -305,10 +327,71 @@
             return <g opacity="0.6">{grid}</g>;
         };
 
+        const FileExplorer = ({ isOpen, onClose, onImport }) => {
+            const [currentPath, setCurrentPath] = useState('');
+            const [items, setItems] = useState([]);
+            const [selectedPath, setSelectedPath] = useState(null);
+            const [loading, setLoading] = useState(false);
+
+            useEffect(() => {
+                if (isOpen) loadPath('');
+            }, [isOpen]);
+
+            const loadPath = async (path) => {
+                setLoading(true);
+                try {
+                    const data = await db.listServerFiles(path);
+                    setCurrentPath(data.path);
+                    setItems(data.items || []);
+                    setSelectedPath(null);
+                } catch (e) {
+                    console.error(e);
+                }
+                setLoading(false);
+            };
+
+            const handleImport = () => {
+                if (selectedPath) {
+                    onImport(selectedPath);
+                    onClose();
+                }
+            };
+
+            if (!isOpen) return null;
+
+            return (
+                <div className="fixed inset-0 z-[210] bg-black/80 backdrop-blur-sm flex items-center justify-center p-8">
+                    <div className="bg-zinc-900 border border-zinc-700 rounded-xl w-full max-w-2xl h-[70vh] flex flex-col shadow-2xl overflow-hidden">
+                        <div className="p-4 border-b border-zinc-700 flex justify-between items-center bg-zinc-950">
+                            <h2 className="text-lg font-bold text-white flex items-center gap-2"><HardDrive size={20} className="text-blue-400"/> File Explorer</h2>
+                            <button onClick={onClose} className="text-gray-400 hover:text-white"><X size={24}/></button>
+                        </div>
+                        <div className="flex-1 overflow-y-auto p-2">
+                            {loading ? <div className="text-center p-4 text-gray-500 text-xs">Loading...</div> : (
+                                <div className="grid grid-cols-4 md:grid-cols-5 gap-2">
+                                    {items.map((item, i) => ( 
+                                        <div key={i} onClick={() => item.type === 'file' ? setSelectedPath(item.path) : loadPath(item.path)} className={`flex flex-col items-center p-2 rounded cursor-pointer transition-colors ${selectedPath === item.path ? 'bg-blue-900/30 border border-blue-500/50' : 'hover:bg-zinc-800 border border-transparent'}`}> 
+                                            <div className="w-full aspect-square bg-black mb-2 flex items-center justify-center overflow-hidden rounded border border-zinc-800">
+                                                {item.type === 'file' ? ( <img src={`/api/asset/${encodeURIComponent(item.name)}`} className="w-full h-full object-cover" onError={(e) => {e.target.style.display='none'; e.target.nextSibling.style.display='block'}}/> ) : null}
+                                                <div style={{display: item.type === 'file' ? 'none' : 'block'}}>{item.type === 'dir' || item.type === 'drive' ? ( <Folder size={32} className={item.type === 'drive' ? "text-orange-400" : "text-yellow-400"} /> ) : ( <File size={32} className="text-gray-500" /> )}</div>
+                                            </div>
+                                            <span className="text-xs text-gray-300 truncate w-full text-center">{item.name}</span> 
+                                        </div> 
+                                    ))}
+                                    {items.length === 0 && <div className="text-center p-8 text-gray-600 text-xs">No files found</div>}
+                                </div>
+                            )}
+                        </div>
+                        <div className="p-4 border-t border-zinc-800 bg-zinc-900 flex justify-end gap-2"><button onClick={onClose} className="px-4 py-2 rounded text-xs font-bold text-gray-400 hover:text-white hover:bg-zinc-800">Cancel</button><button onClick={handleImport} disabled={!selectedPath} className="px-6 py-2 rounded bg-blue-600 hover:bg-blue-500 text-white text-xs font-bold disabled:opacity-50 disabled:cursor-not-allowed">Import Selected</button></div>
+                    </div>
+                </div>
+            );
+        };
+
         const AssetBrowser = ({ isOpen, onClose, onSelect, initialTab = 'image' }) => {
             const [activeTab, setActiveTab] = useState(initialTab);
             const [assets, setAssets] = useState([]);
-            const fileInputRef = useRef(null);
+            const [showFileExplorer, setShowFileExplorer] = useState(false);
 
             useEffect(() => {
                 if (isOpen) {
@@ -322,11 +405,10 @@
                 setAssets(all);
             };
 
-            const handleUpload = async (e) => {
-                const file = e.target.files[0];
-                if (!file) return;
+            const handleImport = async (path) => {
                 try {
-                    await db.saveAsset(file);
+                    await db.importAssetFromPath(path);
+                    setShowFileExplorer(false);
                     await loadAssets();
                 } catch (err) {
                     console.error(err);
@@ -347,6 +429,7 @@
 
             return (
                 <div className="fixed inset-0 z-[200] bg-black/80 backdrop-blur-sm flex items-center justify-center p-8">
+                    <FileExplorer isOpen={showFileExplorer} onClose={() => setShowFileExplorer(false)} onImport={handleImport} />
                     <div className="bg-zinc-900 border border-zinc-700 rounded-xl w-full max-w-4xl h-[80vh] flex flex-col shadow-2xl overflow-hidden">
                         <div className="p-4 border-b border-zinc-700 flex justify-between items-center bg-zinc-950">
                             <h2 className="text-lg font-bold text-white flex items-center gap-2"><Folder size={20} className="text-blue-400"/> Asset Library</h2>
@@ -362,12 +445,11 @@
                         </div>
                         <div className="flex-1 overflow-y-auto p-4 bg-zinc-900/50">
                             <div className="grid grid-cols-4 md:grid-cols-5 gap-4">
-                                <div onClick={() => fileInputRef.current.click()} className="aspect-square border-2 border-dashed border-zinc-700 rounded-lg flex flex-col items-center justify-center cursor-pointer hover:border-blue-500 hover:bg-zinc-800 transition-colors group">
+                                <div onClick={() => setShowFileExplorer(true)} className="aspect-square border-2 border-dashed border-zinc-700 rounded-lg flex flex-col items-center justify-center cursor-pointer hover:border-blue-500 hover:bg-zinc-800 transition-colors group">
                                     <div className="w-12 h-12 rounded-full bg-zinc-800 flex items-center justify-center mb-2 group-hover:bg-blue-600 transition-colors">
-                                        <Plus size={24} className="text-gray-400 group-hover:text-white"/>
+                                        <HardDrive size={24} className="text-gray-400 group-hover:text-white"/>
                                     </div>
-                                    <span className="text-xs font-bold text-gray-500 group-hover:text-gray-300">Upload New</span>
-                                    <input type="file" ref={fileInputRef} className="hidden" accept={activeTab === 'video' ? "video/*" : "image/*"} onChange={handleUpload} />
+                                    <span className="text-xs font-bold text-gray-500 group-hover:text-gray-300">Browse Server</span>
                                 </div>
                                 {filteredAssets.map(asset => (
                                     <div key={asset.id} onClick={() => onSelect(asset)} className="aspect-square bg-black border border-zinc-700 rounded-lg overflow-hidden relative group cursor-pointer hover:ring-2 hover:ring-blue-500">
@@ -1366,7 +1448,7 @@
                                         cue.nodes = await Promise.all(cue.nodes.map(async (n) => {
                                             if (n.data?.assetId) {
                                                 // Use server URL directly
-                                                n.data.value = '/api/asset/' + n.data.assetId;
+                                                n.data.value = '/api/asset/' + encodeURIComponent(n.data.assetId);
                                             }
                                             return n;
                                         }));
